# prism-ai-agent

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
assets/css/: .gitignore
src/: __init__.py  celery.py  settings.py  urls.py
src/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_add_custom_user_auth.py  0002_add_user_company_info.py
src/assets/: admin.py  apps.py  models.py  urls.py  views.py
src/assets/migrations/: 0001_setup_asset_generation.py
src/runs/: admin.py  apps.py  models.py  tasks.py  tokenization.py  urls.py  views.py
src/runs/migrations/: 0001_setup_orchestration_models.py
src/runs/tasks/: __init__.py  audio.py  common.py  image.py  orchestrator.py  video.py
src/sources/: apps.py  forms.py  urls.py  views.py
src/ui/: apps.py  urls.py  views.py
templates/: base.html
templates/accounts/: login.html  profile.html  signup.html
templates/accounts/partials/: email_control.html  password_control.html  text_control.html
templates/assets/: library.html
templates/assets/partials/: modality_section.html
templates/partials/: _message_box.html  empty_state.html  footer.html  messages.html  nav.html
templates/partials/components/: _button_inner.html  _button_markup.html  _status_badge_markup.html  button.html  form_field.html  progress_bar.html  status_badge.html  tab_item.html  (+1 more)
templates/runs/: detail.html  list.html
templates/sources/: ingest.html
templates/ui/: home.html
theme/: apps.py
(+16 files in other folders)
